<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.phaberland.inventoryApp.Frontend.MainScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/topControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/settingsButton"
                android:contentDescription="@string/desc_settings"
                android:onClick="settingsButtonPressed"
                app:layout_constraintDimensionRatio="1:1"
                app:srcCompat="@android:drawable/ic_menu_preferences"
                android:layout_height="52dp"
                android:layout_width="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/inventoryButton"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="inventoryButtonPressed"
                android:text="@string/button_inv"
                app:layout_constraintEnd_toStartOf="@+id/shoppingButton"
                app:layout_constraintStart_toEndOf="@+id/settingsButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/shoppingButton"
                android:layout_width="123dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="shoppingButtonPressed"
                android:text="@string/button_shop"
                app:layout_constraintBaseline_toBaselineOf="@+id/inventoryButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/inventoryButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/filter"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/label_filter"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/addItemButton"
                android:layout_width="123dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="addButtonPressed"
                android:text="@string/desc_addItem"
                app:layout_constraintBaseline_toBaselineOf="@+id/inventoryButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/inventoryButton" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/mainTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>